test_suite/tests/ui/remote/bad_remote.stderr
error: failed to parse path: "~~~"
  --> $DIR/bad_remote.rs:18:10
   |
18 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

